--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.4.1
 autopep8==1.5.7
+boto3==1.18.32
+botocore==1.21.32
 certifi==2021.5.30
 charset-normalizer==2.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.6
 django-cors-headers==3.8.0
+django-storages==1.11.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
 drf-yasg==1.20.0
@@ -13,16 +16,21 @@ idna==3.2
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.0.1
+jmespath==0.10.0
 MarkupSafe==2.0.1
 packaging==21.0
+Pillow==8.3.1
 pycodestyle==2.7.0
 PyJWT==2.1.0
 pyparsing==2.4.7
+python-dateutil==2.8.2
 python-dotenv==0.19.0
 pytz==2021.1
 requests==2.26.0
 ruamel.yaml==0.17.16
 ruamel.yaml.clib==0.2.6
+s3transfer==0.5.0
+six==1.16.0
 sqlparse==0.4.1
 toml==0.10.2
 uritemplate==3.0.1
