--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.6
 django-cors-headers==3.8.0
+django-filter==2.4.0
 django-storages==1.11.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
